--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "repository": "https://github.com/plort152/graphql.git",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "global": "^4.4.0",
+    "graphql-yoga": "^1.18.3",
+    "nodemon": "^2.0.7"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1"
   }
 }
