--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "repository": "https://github.com/plort152/graphql.git",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "global": "^4.4.0",
     "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7"
   },
   "scripts": {
